First styles and content

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,17 @@
     <body>
         <main class="container">
             <header class="row">
+                <h1>Best beers of the world</h1>
             </header>
 
-            <section class="title">
-
+            <section>
+                <div class="row">
+                    <article>
+                        <img src="" alt="">
+                        <h3>Name of beer</h3>
+                        <p>Description of beer</p>
+                    </article>
+                </div>  
             </section>
 
             <footer><img src="assets/Kagool.png" alt="Kagool Logo"></footer>
