--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,15 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
 
-    <body onload="javascript:callAPI.loadData()">
+    <body>
         <main class="container">
-            <header class="row">
-                <h1 class="center">Best beers of the world</h1>
+            <header>
+                <h1>Best beers of the world</h1>
+                <p class="seeAll">Open the whole list</p>
+                <p class="hideAll">Close the whole list</p>
             </header>
 
             <section id="beerlist">
-
             </section>
 
             <footer><img src="assets/Kagool.png" alt="Kagool Logo"></footer>
