Grid and second animation

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,19 @@
                 <p class="hideAll">Close the whole list</p>
             </section>
             
-            <section class="beerlist">
+            <section class="beerList">
+            </section>
+
+            <div class="fadebeer">  
+                <div class="cycle-slideshow" data-cycle-fx="fade" data-cycle-timeout="20" data-cycle-carousel-fluid="true" data-cycle-easing="linear" data-cycle-slides="img">
+                    <img src="assets/images/192_90_small_x1.png" alt="Image number 192">
+                    <img src="assets/images/194_90_small_x1.png" alt="Image number 194">
+                    <img src="assets/images/196_90_small_x1.png" alt="Image number 196">
+                    <img src="assets/images/198_90_small_x1.png" alt="Image number 198">
+                </div>
+            </div>
+
+            <section class="beerGrid">
             </section>
 
             <footer><img src="assets/Kagool.png" alt="Kagool Logo"></footer>
